@@ -1,3 +1,9 @@
+2009-01-05  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/38672
+	* gfortran.dg/host_assoc_blockdata_1.f90:  New test.
+	* gfortran.dg/host_assoc_blockdata_2.f90:  New test.
+
 2009-01-05  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.dg/compat/struct-layout-1_generate.c (dg-options): Add -mieee
